<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="18dp">

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/keywordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keyword" />

    <TextView
        android:id="@+id/keyInvalidation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/keyInvalidation"
        android:textColor="@android:color/holo_red_light"
        android:visibility="gone"/>
</android.support.v7.widget.LinearLayoutCompat>

<android.support.v7.widget.LinearLayoutCompat
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatAutoCompleteTextView
        android:id="@+id/keywordInput"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:textColor="@android:color/darker_gray"
        android:hint="@string/enterkeyword"
        android:clickable="true"
        android:completionThreshold="2"/>


</android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/categoryView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Spinner
        android:id="@+id/categoryspinner"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:entries="@array/category_arrays" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/distanceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance" />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/distanceInput"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:hint="@string/dis10"
            android:inputType="textPersonName|number"
            android:textColor="@android:color/darker_gray" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Spinner
        android:id="@+id/unitSpinner"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:entries="@array/unit_arrays" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/textView5"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:text="@string/from" />
    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RadioGroup
        android:id="@+id/radioLocation"
        android:layout_width="306dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/locationRB0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/currentlct" />

        <RadioButton
            android:id="@+id/locationRB1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otherlct" />
    </RadioGroup>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/locationvalidation"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/keyInvalidation"
            android:textColor="@android:color/holo_red_light"
            android:visibility="gone"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/locationInput"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:inputType="textPersonName"
        android:hint="@string/locationIn"
        android:textColor="@android:color/darker_gray" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/searchBT"
            android:layout_width="148dp"
            android:layout_height="44dp"
            android:text="@string/searchbt" />

        <Button
            android:id="@+id/clearBT"
            android:layout_width="149dp"
            android:layout_height="44dp"
            android:text="@string/claerbt" />
    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v7.widget.LinearLayoutCompat>