<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/processBarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="150dp"
        android:visibility="visible">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="100dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadingBar"
            android:layout_marginTop="30dp"/>
    </android.support.v7.widget.LinearLayoutCompat>

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp">

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/artinameView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/atD"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/aritistsinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naHint" />
</android.support.v7.widget.LinearLayoutCompat>
<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/venueView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/venueD"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/venueinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naHint" />
</android.support.v7.widget.LinearLayoutCompat>
<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/timeView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/timeD"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/timeinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naHint" />
</android.support.v7.widget.LinearLayoutCompat>
<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/cateView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/cateD"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/cateinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naHint" />
</android.support.v7.widget.LinearLayoutCompat>
<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/priceView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/prD"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/priceinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naHint" />
</android.support.v7.widget.LinearLayoutCompat>

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/ticketView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/tsD"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/ticketstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naHint" />
</android.support.v7.widget.LinearLayoutCompat>
<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/btaView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/btaD"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/btalinke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naHint" />
</android.support.v7.widget.LinearLayoutCompat>

<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/smapView"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:text="@string/smD"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/smaplink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naHint" />
</android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>