<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailMainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/infotoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/search_results">
            <ImageView
                android:id="@+id/fvrtBT"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="50dp"
            />
            <ImageView
                android:id="@+id/twitterBT"
                android:layout_width="40dp"
                android:layout_height="40dp" />

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/infotabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/tabFontColor">

            <android.support.design.widget.TabItem
                android:id="@+id/eventtab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/arttab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artists_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/venuetab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venue_tab" />

            <android.support.design.widget.TabItem
                android:id="@+id/upcomingtab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_tab" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/infocontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</android.support.design.widget.CoordinatorLayout>